chore: auth dto
