# src/auth/dto/login-user.dto.ts
@@ -3,3 +3,5 @@ import { UserDto } from '@src/users/dto/user.dto'
 import { PickType } from '@nestjs/swagger'
 
 export class LoginUserDto extends PickType(UserDto, ['email', 'password']) {}
+
+export class MeDto extends PickType(UserDto, ['id', 'name', 'email', 'role']) {}
